--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,12 @@
 #Database Configuration
 test.fetch.property=abc.com
 
-#spring.datasource.url=jdbc::123com
-#spring.datasource.username=
-#spring.datasource.password=
+spring.datasource.url=jdbc:mysql://localhost:3306/demo?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+jdbc.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+
 
 
 
