--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,12 +5,18 @@
 #Database Configuration
 test.fetch.property=abc.com
 
-spring.datasource.url=jdbc:mysql://localhost:3306/demo?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-jdbc.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+#Local connection
+#spring.datasource.url=jdbc:mysql://localhost:3306/demo?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+#jdbc.driverClassName=com.mysql.jdbc.Driver
+#spring.datasource.username=root
+#spring.datasource.password=
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
+#
+spring.datasource.url=jdbc:mysql://172.16.0.182:3306/demo?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+jdbc.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.username=dbadmin
+spring.datasource.password=Password123
 
 
 
