--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,17 @@ jdbc.driverClassName=com.mysql.jdbc.Driver
 #web properties
 server.error.path=/error
 
-# file upload
-spring.servlet.multipart.max-file-size=500KB
-spring.servlet.multipart.max-request-size=500KB
+
+## MULTIPART (MultipartProperties)
+# Enable multipart uploads
+spring.servlet.multipart.enabled=true
+# Threshold after which files are written to disk.
+spring.servlet.multipart.file-size-threshold=2KB
+# Max file size.
+spring.servlet.multipart.max-file-size=3MB
+# Max Request Size
+spring.servlet.multipart.max-request-size=3MB
+
+## File Storage Properties
+# All files uploaded through the REST API will be stored in this directory
+file.upload-dir=/Users/alina/Desktop/upload
