--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,15 +8,15 @@ test.fetch.property=abc.com
 #Local connection
 #spring.datasource.url=jdbc:mysql://localhost:3306/demo?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 #jdbc.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=
+#spring.datasource.username=root
+#spring.datasource.password=
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
 #
-#spring.datasource.url=jdbc:mysql://172.16.0.182:3306/demo?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://172.16.0.182:3306/demo?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 jdbc.driverClassName=com.mysql.jdbc.Driver
-#spring.datasource.username=dbadmin
-#spring.datasource.password=Password123
+spring.datasource.username=dbadmin
+spring.datasource.password=Password123
 
 
 
