--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,17 +7,17 @@ application.version=dev
 test.fetch.property=abc.com
 
 #Local connection
-#spring.datasource.url=jdbc:mysql://localhost:3306/demo?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-#jdbc.driverClassName=com.mysql.jdbc.Driver
-#spring.datasource.username=root
-#spring.datasource.password=
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+spring.datasource.url=jdbc:mysql://localhost:3306/demo?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+jdbc.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
 #finance database
-spring.datasource.url=jdbc:mysql://172.16.0.182:3306/devdb1?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-jdbc.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.username=dbadmin
-spring.datasource.password=Password123
+#spring.datasource.url=jdbc:mysql://172.16.0.182:3306/devdb1?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+#jdbc.driverClassName=com.mysql.jdbc.Driver
+#spring.datasource.username=dbadmin
+#spring.datasource.password=Password123
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
