--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,11 +7,15 @@ application.version=dev
 test.fetch.property=abc.com
 
 #Local connection
-#spring.datasource.url=jdbc:mysql://localhost:3306/finance?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://localhost:3306/capstone?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://localhost:3306/capstone
 #jdbc.driverClassName=com.mysql.jdbc.Driver
 #spring.datasource.username=root
 #spring.datasource.password=
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
 
 #finance database
 spring.datasource.url=jdbc:mysql://172.16.0.182:3306/testfinscm?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
