--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,9 @@ test.fetch.property=abc.com
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
 #finance database
-spring.datasource.url=jdbc:mysql://172.16.0.182:3306/testfinscm?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+database.name=devdb1
+
+spring.datasource.url=jdbc:mysql://172.16.0.182:3306/${database.name}?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 jdbc.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.username=dbadmin
 spring.datasource.password=Password123
