--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,14 +8,12 @@ test.fetch.property=abc.com
 
 #Local connection
 #spring.datasource.url=jdbc:mysql://localhost:3306/capstone?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.jpa.hibernate.ddl-auto=update
 database.name=capstone
-spring.datasource.url=jdbc:mysql://localhost:3306/capstone?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/${database.name}?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 jdbc.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.password=wublt98312
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
