a bit change on stringlistconverter, but I'm sure it's not that problem

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,11 +7,11 @@ application.version=dev
 test.fetch.property=abc.com
 
 #Local connection
-database.name=devdb
-spring.datasource.url=jdbc:mysql://localhost:3306/${database.name}?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+database.name=finance
+spring.datasource.url=jdbc:mysql://172.16.0.182:3306/${database.name}?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 jdbc.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.username=devdb
-spring.datasource.password=password
+spring.datasource.username=dbadmin
+spring.datasource.password=Password123
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
