--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,27 +7,12 @@ application.version=dev
 test.fetch.property=abc.com
 
 #Local connection
-database.name=capstone
-spring.datasource.url=jdbc:mysql://localhost:3306/${database.name}?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-jdbc.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=19980312
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.show-sql=true
-spring.jpa.open-in-view=false
-spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
-spring.datasource.initialization-mode=always
-spring.datasource.separator=^;
-
-#finance database
-#database.name=devdb1
-#
-#spring.datasource.url=jdbc:mysql://172.16.0.182:3306/${database.name}?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+#database.name=capstone
+#spring.datasource.url=jdbc:mysql://localhost:3306/${database.name}?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 #jdbc.driverClassName=com.mysql.jdbc.Driver
-#spring.datasource.username=dbadmin
-#spring.datasource.password=Password123
-#spring.jpa.hibernate.ddl-auto = update
+#spring.datasource.username=root
+#spring.datasource.password=19980312
+#spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 #spring.jpa.show-sql=true
 #spring.jpa.open-in-view=false
@@ -35,11 +20,26 @@ spring.datasource.separator=^;
 #spring.datasource.initialization-mode=always
 #spring.datasource.separator=^;
 
+#finance database
+database.name=finance
+
+spring.datasource.url=jdbc:mysql://172.16.0.182:3306/${database.name}?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+jdbc.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.username=dbadmin
+spring.datasource.password=Password123
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+spring.datasource.initialization-mode=always
+spring.datasource.separator=^;
+
 
 #mit -
 
 #web properties
-server.error.path=/error
+server.hasError.path=/hasError
 
 
 ## MULTIPART (MultipartProperties)
