--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ test.fetch.property=abc.com
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
 #finance database
-database.name=testfinscm
+database.name=devsb1
 
 spring.datasource.url=jdbc:mysql://172.16.0.182:3306/${database.name}?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 jdbc.driverClassName=com.mysql.jdbc.Driver
