--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,10 +8,10 @@ test.fetch.property=abc.com
 
 #Local connection
 database.name=capstone
-spring.datasource.url=jdbc:mysql://localhost:3306/${database.name}?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/capstone?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 jdbc.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=19980312
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
