--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,12 +21,22 @@ test.fetch.property=abc.com
 #spring.datasource.separator=^;
 
 #finance database
-database.name=devdb1
+db.choice=server
+schema.name=finance
 
-spring.datasource.url=jdbc:mysql://172.16.0.182:3306/${database.name}?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+database.local=localhost
+database.server=172.16.0.182
+local.username=root
+local.password=
+
+server.username=dbadmin
+server.password=Password123
+
+
+spring.datasource.url=jdbc:mysql://${database.${db.choice}}:3306/${schema.name}?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 jdbc.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.username=dbadmin
-spring.datasource.password=Password123
+spring.datasource.username=${${db.choice}.username}
+spring.datasource.password=${${db.choice}.password}
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
