sub1 check repeated name

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,7 @@ test.fetch.property=abc.com
 
 #finance database
 db.choice=server
-schema.name=finance
+schema.name=devdb1
 
 database.local=localhost
 database.server=172.16.0.182
