--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,43 +7,43 @@ application.version=dev
 test.fetch.property=abc.com
 
 #Local connection
-database.name=capstone
-spring.datasource.url=jdbc:mysql://localhost:3306/${database.name}?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-jdbc.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=19980312
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.show-sql=true
-spring.jpa.open-in-view=false
-spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
-spring.datasource.initialization-mode=always
-spring.datasource.separator=^;
-
-#finance database
-#db.choice=server
-#schema.name=finance
-#
-#database.local=localhost
-#database.server=172.16.0.182
-#local.username=root
-#local.password=
-#
-#server.username=dbadmin
-#server.password=Password123
-#
-#
-#spring.datasource.url=jdbc:mysql://${database.${db.choice}}:3306/${schema.name}?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+#database.name=capstone
+#spring.datasource.url=jdbc:mysql://localhost:3306/${database.name}?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 #jdbc.driverClassName=com.mysql.jdbc.Driver
-#spring.datasource.username=${${db.choice}.username}
-#spring.datasource.password=${${db.choice}.password}
-#spring.jpa.hibernate.ddl-auto = update
+#spring.datasource.username=root
+#spring.datasource.password=19980312
+#spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 #spring.jpa.show-sql=true
 #spring.jpa.open-in-view=false
 #spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 #spring.datasource.initialization-mode=always
 #spring.datasource.separator=^;
+
+#finance database
+db.choice=server
+schema.name=finance
+
+database.local=localhost
+database.server=172.16.0.182
+local.username=root
+local.password=
+
+server.username=dbadmin
+server.password=Password123
+
+
+spring.datasource.url=jdbc:mysql://${database.${db.choice}}:3306/${schema.name}?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+jdbc.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.username=${${db.choice}.username}
+spring.datasource.password=${${db.choice}.password}
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+spring.datasource.initialization-mode=always
+spring.datasource.separator=^;
 
 
 #mit -
