--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,51 +2,25 @@
 #Dev branchg
 application.version=dev
 
-
 #Database Configuration
 test.fetch.property=abc.com
 
-#Local connection
-database.name=finance
-spring.datasource.url=jdbc:mysql://172.16.0.182:3306/${database.name}?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-jdbc.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.username=dbadmin
-spring.datasource.password=Password123
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.show-sql=true
-spring.jpa.open-in-view=false
-spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
-spring.datasource.initialization-mode=always
-spring.datasource.separator=^;
-
 #finance database
-#database.name=devdb1
-#
-#spring.datasource.url=jdbc:mysql://172.16.0.182:3306/${database.name}?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-#jdbc.driverClassName=com.mysql.jdbc.Driver
-#spring.datasource.username=root
-#spring.datasource.password=19980312
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-#spring.jpa.show-sql=true
-#spring.jpa.open-in-view=false
-#spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
-#spring.datasource.initialization-mode=always
-#spring.datasource.separator=^;
-
-#finance database
+####Backend Developers just change the following to your own settings###
+### change db.choice to either "server" or "local"
+### change schema.name to your schema name
 db.choice=server
 schema.name=devdb1
+local.username=root
+local.password=
+#######
 
 database.local=localhost
 database.server=172.16.0.182
-local.username=root
-local.password=
+
 
 server.username=dbadmin
 server.password=Password123
-
 
 spring.datasource.url=jdbc:mysql://${database.${db.choice}}:3306/${schema.name}?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 jdbc.driverClassName=com.mysql.jdbc.Driver
