--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ test.fetch.property=abc.com
 ### change db.choice to either "server" or "local"
 ### change schema.name to your schema name
 db.choice=server
-schema.name=finance
+schema.name=devdb1
 local.username=root
 local.password=
 #######
