--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@
 #Dev branchg
 application.version=dev
 
+website.url=http://localhost:3000
+
 #Database Configuration
 test.fetch.property=abc.com
 
@@ -10,7 +12,7 @@ test.fetch.property=abc.com
 ### change db.choice to either "server" or "local"
 ### change schema.name to your schema name
 db.choice=server
-schema.name=supplychain
+schema.name=devdb1
 local.username=root
 local.password=
 #######
