finish adding approver list when retrieve budget details, return more fields in finding cost centers and budget list

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ test.fetch.property=abc.com
 ### change db.choice to either "server" or "local"
 ### change schema.name to your schema name
 db.choice=server
-schema.name=devdb1
+schema.name=releasedb
 local.username=root
 local.password=
 #######
