--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,19 @@
 			<artifactId>mockito-core</artifactId>
 			<version>2.13.0</version>
 		</dependency>
+		<!-- Email -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+			<version>2.0.1.RELEASE</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-thymeleaf -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+			<version>2.1.8.RELEASE</version>
+		</dependency>
+
 
 	</dependencies>
 
