--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,10 +11,11 @@ test.fetch.property=abc.com
 ####Backend Developers just change the following to your own settings###
 ### change db.choice to either "server" or "local"
 ### change schema.name to your schema name
-db.choice=server
-schema.name=devdb1
+db.choice=local
+#schema.name=devdb1
+schema.name=capstone
 local.username=root
-local.password=
+local.password=19980312
 #######
 
 database.local=localhost
@@ -56,3 +57,14 @@ spring.servlet.multipart.max-request-size=3MB
 ## File Storage Properties
 # All files uploaded through the REST API will be stored in this directory
 file.upload-dir=uploadedFiles
+
+# Email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=is4103.capstone@gmail.com
+spring.mail.password=capstone4103
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=3000
+spring.mail.properties.mail.smtp.writetimeout=5000
