--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ test.fetch.property=abc.com
 ### change db.choice to either "server" or "local"
 ### change schema.name to your schema name
 db.choice=server
-schema.name=releasedb
+schema.name=devdb1
 local.username=root
 local.password=
 #######
@@ -24,10 +24,10 @@ database.server=172.16.0.182
 server.username=dbadmin
 server.password=Password123
 
-spring.datasource.url=jdbc:mysql://localhost:3306/capstone?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://${database.${db.choice}}:3306/${schema.name}?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 jdbc.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.username=${${db.choice}.username}
+spring.datasource.password=${${db.choice}.password}
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
@@ -35,6 +35,7 @@ spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.datasource.initialization-mode=always
 spring.datasource.separator=^;
+
 
 
 #mit -
