start to try another approach...

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -59,16 +59,14 @@ spring.servlet.multipart.max-request-size=3MB
 file.upload-dir=uploadedFiles
 
 # Email
-mail.host=smtp.gmail.com
-mail.port=587
-mail.username=is4103.capstone@gmail.com
-mail.password=capstone4103
-#spring.mail.host=smtp.gmail.com
-#spring.mail.port=587
-#spring.mail.username=is4103.capstone@gmail.com
-#spring.mail.password=capstone4103
-#spring.mail.properties.mail.smtp.auth=true
-#spring.mail.properties.mail.smtp.starttls.enable=true
-#spring.mail.properties.mail.smtp.connectiontimeout=5000
-#spring.mail.properties.mail.smtp.timeout=3000
-#spring.mail.properties.mail.smtp.writetimeout=5000
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.protocol=smtp
+spring.mail.defaultEncoding=UTF-8
+spring.mail.username=is4103.capstone@gmail.com
+spring.mail.password=capstone4103
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
