Added get all seatmaps API; configured background service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,10 +11,10 @@ test.fetch.property=abc.com
 ####Backend Developers just change the following to your own settings###
 ### change db.choice to either "server" or "local"
 ### change schema.name to your schema name
-db.choice=server
-schema.name=devdb1
+db.choice=local
+schema.name=capstone
 local.username=root
-local.password=
+local.password=password
 #######
 
 database.local=localhost
@@ -35,6 +35,7 @@ spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.datasource.initialization-mode=always
 spring.datasource.separator=^;
+spring.session.jdbc.initialize-schema=always
 
 
 
