--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -65,6 +65,7 @@ spring.mail.protocol=smtp
 spring.mail.defaultEncoding=UTF-8
 spring.mail.username=is4103.capstone@gmail.com
 spring.mail.password=capstone4103
+#svirbtihekvqxhyn
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
