change back applications.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,11 +11,11 @@ test.fetch.property=abc.com
 ####Backend Developers just change the following to your own settings###
 ### change db.choice to either "server" or "local"
 ### change schema.name to your schema name
-db.choice=local
-#schema.name=devdb1
-schema.name=capstone
-local.username=root
-local.password=19980312
+db.choice=server
+schema.name=devdb1
+#schema.name=capstone
+#local.username=root
+#local.password=19980312
 #######
 
 database.local=localhost
