--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,12 +11,12 @@ test.fetch.property=abc.com
 ####Backend Developers just change the following to your own settings###
 ### change db.choice to either "server" or "local"
 ### change schema.name to your schema name
-db.choice=server
-schema.name=devdb1
-#schema.name=capstone
+db.choice=local
+#schema.name=devdb1
+schema.name=capstone
 #schema.name=releasedb
 local.username=root
-local.password=
+local.password=19980312
 
 database.local=localhost
 database.server=172.16.0.182
