application.properties leave releasedb schema

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ test.fetch.property=abc.com
 db.choice=server
 #schema.name=devdb1
 #schema.name=capstone
-#schema.name=releasedb
+schema.name=releasedb
 local.username=root
 local.password=
 
