before db not working

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,11 +20,13 @@ local.password=
 database.local=localhost
 database.server=172.16.0.182
 
-
 server.username=dbadmin
-server.password=Password123
+server.password=is4103capstone
 
 spring.datasource.url=jdbc:mysql://${database.${db.choice}}:3306/${schema.name}?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://172.16.0.182:3306/sr1?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+#spring.datasource.username=dbadmin
+#spring.datasource.password=is4103capstone
 jdbc.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.username=${${db.choice}.username}
 spring.datasource.password=${${db.choice}.password}
