--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,7 @@ database.local=localhost
 database.server=172.16.0.182
 
 server.username=dbadmin
-server.password=is4103capstone
+server.password=Password123
 
 spring.datasource.url=jdbc:mysql://${database.${db.choice}}:3306/${schema.name}?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 #spring.datasource.url=jdbc:mysql://172.16.0.182:3306/sr1?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
