--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,10 +13,9 @@ test.fetch.property=abc.com
 ### change schema.name to your schema name
 db.choice=local
 
-#schema.name=releasedb
-schema.name=capstone
+schema.name=releasedb
 local.username=root
-local.password=19980312
+local.password=
 
 database.local=localhost
 database.server=172.16.0.182
