--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,9 +13,10 @@ test.fetch.property=abc.com
 ### change schema.name to your schema name
 db.choice=local
 
-schema.name=releasedb
+#schema.name=releasedb
+schema.name=capstone
 local.username=root
-local.password=
+local.password=19980312
 
 database.local=localhost
 database.server=172.16.0.182
