--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ test.fetch.property=abc.com
 ####Backend Developers just change the following to your own settings###
 ### change db.choice to either "server" or "local"
 ### change schema.name to your schema name
-db.choice=local
+db.choice=server
 
 schema.name=sr1
 local.username=root
