team-employee change to 1-many, add travel training model

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,9 @@ test.fetch.property=abc.com
 ####Backend Developers just change the following to your own settings###
 ### change db.choice to either "server" or "local"
 ### change schema.name to your schema name
-db.choice=server
+db.choice=local
 
-schema.name=testnewentity
+schema.name=capstone
 local.username=root
 local.password=
 
