data init files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ test.fetch.property=abc.com
 ### change schema.name to your schema name
 db.choice=server
 
-schema.name=devdb
+schema.name=releasedb
 local.username=root
 local.password=
 
