--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,10 +14,9 @@ test.fetch.property=abc.com
 db.choice=local
 #server
 
-schema.name=capstone
-#sr1
+schema.name=sr1
 local.username=root
-local.password=
+local.password=19980312
 
 database.local=localhost
 database.server=172.16.0.182
