purchase order and invoice changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,8 @@ test.fetch.property=abc.com
 #### Backend Developers just change the following to your own settings###
 ### change db.choice to either "server" or "local"
 ### change schema.name to your schema name
-db.choice=local
-schema.name=capstone
+db.choice=server
+schema.name=releasedb
 local.username=root
 local.password=19980312
 
