bjf module with some connections with outsourcing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ db.choice=server
 
 schema.name=releasedb
 local.username=root
-local.password=19980312
+local.password=
 
 database.local=localhost
 database.server=172.16.0.182
