bjf minor change

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ test.fetch.property=abc.com
 ### change schema.name to your schema name
 db.choice=server
 
-schema.name=releasedb
+schema.name=sr2
 local.username=root
 local.password=
 
